--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "joi": "^17.4.0",
     "knex": "0.21.17",
     "morgan": "~1.9.1",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "ts-node": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^15.12.5",
